@@ -7,7 +7,7 @@
 # 	- rm
 #########################
 
-use Gtk2::TestHelper tests => 57;
+use Gtk2::TestHelper tests => 60;
 
 my $win = Gtk2::Window->new;
 
@@ -16,30 +16,29 @@ $win->add($nb);
 ok(1);
 
 
-$nb->prepend_page( Gtk2::Label->new('p1c'), Gtk2::Label->new('p1') );
-ok(1);
+# just to make the lines shorter
+sub label { Gtk2::Label->new (shift) }
 
-$nb->append_page( Gtk2::Label->new('p2c'), Gtk2::Label->new('p2') );
-ok(1);
+is ($nb->prepend_page (label ('p1c'), label ('p1')), 0);
 
-my $child = Gtk2::Label->new('p1.5c');
-$nb->insert_page( $child, Gtk2::Label->new('p1.5'), 1 );
-ok(1);
+is ($nb->append_page (label ('p2c'), label ('p2')), 1);
 
-$nb->prepend_page_menu( Gtk2::Label->new('Page 1c'), undef, Gtk2::Label->new('Page 1 pop') );
-ok(1);
+my $child = label ('p1.5c');
+is ($nb->insert_page ($child, label ('p1.5'), 1), 1);
 
-$nb->append_page_menu( Gtk2::Label->new('Page 6c'), Gtk2::Label->new('Page 6l'),
-		Gtk2::Label->new('Page 6 pop') );
-ok(1);
+is ($nb->prepend_page_menu (label ('Page 1c'), undef, label ('Page 1 pop')), 0);
 
-my $child2 = Gtk2::Label->new('Page 2c');
-$nb->insert_page_menu($child2, Gtk2::Label->new('Page 2 pop'), undef, 1 );
-ok(1);
+is ($nb->append_page_menu (label ('Page 6c'), label ('Page 6l'),
+			   label ('Page 6 pop')),
+    4);;
 
-$nb->insert_page( Gtk2::Label->new('remove'), Gtk2::Label->new('remove'), 7 );
-$nb->insert_page( Gtk2::Label->new('remove'), Gtk2::Label->new('remove'), 7 );
-$nb->insert_page( Gtk2::Label->new('remove'), Gtk2::Label->new('remove'), 0 );
+my $child2 = label ('Page 2c');
+is ($nb->insert_page_menu ($child2, label ('Page 2 pop'), undef, 1), 1);
+
+is ($nb->insert_page (label ('remove'), label ('remove'), 7), 6);
+is ($nb->insert_page (label ('remove'), label ('remove'), 7), 7);
+is ($nb->insert_page (label ('remove'), label ('remove'), 0), 0);
+
 $nb->remove_page(7);
 ok(1);
 $nb->remove_page(0);
